--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -1439,7 +1439,7 @@
     }
    ],
    "source": [
-    "# # Sort the dataframe by date\n",
+    "# Sort the dataframe by date\n",
     "df = df.sort_index()\n",
     "df"
    ]
@@ -1475,13 +1475,10 @@
     "fig, ax = plt.subplots(figsize = (15, 7))\n",
     "df.plot(ax = ax, x_compat = True)\n",
     "\n",
-    "#set title and labels\n",
+    "#titles\n",
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel('Precipitation (in.)')\n",
-    "ax.set_title(\"Honolulu, HI Precipitation\")\n",
-    "\n",
-    "#save figure\n",
-    "# plt.savefig(\"Images/precip.png\")"
+    "ax.set_title(\"Honolulu, HI Precipitation\")"
    ]
   },
   {
@@ -1747,8 +1744,7 @@
     "    filter(Measurement.date >= prev_year).all()\n",
     "\n",
     "df = pd.DataFrame(results, columns=['tobs'])\n",
-    "df.plot.hist(bins=12)\n",
-    "# plt.tight_layout()"
+    "df.plot.hist(bins=12)"
    ]
   },
   {
